feat: add padding to body when in mid size viewport or above

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body
-    class="bg-[#F3E5D7] font-['Outfit'] md:flex md:flex-col md:justify-center md:items-center"
+    class="bg-[#F3E5D7] font-['Outfit'] md:flex md:flex-col md:justify-center md:items-center md:py-[123px]"
   >
     <header class="bg-white md:max-w-screen-md md:w-full md:pt-10 md:px-10 md:rounded-t-3xl">
         <img
