feat: add padding to body when in mid size viewport or above

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body
     class="bg-[#F3E5D7] font-['Outfit'] md:flex md:flex-col md:justify-center md:items-center md:py-[123px]"
   >
-    <header class="bg-white md:max-w-screen-md md:w-full md:pt-10 md:px-10 md:rounded-t-3xl">
+    <header class="bg-white md:max-w-[736px] md:w-full md:pt-10 md:px-10 md:rounded-t-3xl">
         <img
           class="max-w-full w-full rounded-xl"
           src="./assets/images/image-omelette.jpeg"
@@ -50,7 +50,7 @@
     </header>
 
     <main
-      class="bg-white flex flex-col gap-6 md:gap-8 px-8 pt-8 pb-10 md:max-w-screen-md md:w-full md:pb-10 md:px-10 md:rounded-b-3xl"
+      class="bg-white flex flex-col gap-6 md:gap-8 px-8 pt-8 pb-10 md:max-w-[736px] md:w-full md:pb-10 md:px-10 md:rounded-b-3xl"
     >
       <section class="p-6 md:p-7 bg-[#FFF7FB] flex flex-col gap-4">
         <h2 class="text-xl font-semibold text-[#7A284E]">Preparation time</h2>
